--- a/app/styles/layout/article/_lists.scss
+++ b/app/styles/layout/article/_lists.scss
@@ -1,6 +1,6 @@
 article {
 	ul,
 	ol {
-		maergin-left: 30px;
+		margin-left: 30px;
 	}
 }
